--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=4000
 DBHOST=mongodb+srv://antonioeasv:MENRESTfulAPI@cluster0.iosnbsf.mongodb.net/shop_db_dev?retryWrites=true&w=majority&appName=Cluster0
+TOKEN_SECRET=secret
+JWT_EXPIRES_IN=24h
